# calender-google

./: .gitignore  README.md  pyproject.toml  replit.nix
rest/: client_secret.json  views.py
tutorial/: settings.py  urls.py
